<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".game_info">
    <TextView
            android:text="@string/txt_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_type"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            app:layout_constraintStart_toEndOf="@+id/game_picture" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/txt_game_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="42sp"
            android:textColor="@android:color/holo_blue_bright"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.10259918"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline6"
            app:layout_constraintGuide_percent="0.38440493"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/game_picture"
            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/guideline5" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"/>
    <TextView
            android:text="@string/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintStart_toEndOf="@+id/game_picture"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="14dp"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/txt_nb_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_nb_players"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/game_picture"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_type" android:textStyle="bold"/>
    <TextView
            android:text="@string/txt_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_year"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nb_players"
            app:layout_constraintStart_toEndOf="@+id/game_picture"
            android:layout_marginStart="8dp" android:textStyle="bold"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6" android:id="@+id/txt_description"
            app:layout_constraintBottom_toTopOf="@+id/button"/>
    <Button
            android:text="@string/button_know_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.50121653"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/year"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/txt_year"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nb_players"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/players"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/txt_nb_players"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_type"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name"
            android:textSize="14dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintStart_toEndOf="@+id/txt_name"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/type"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/txt_type"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/txt_type"/>
</androidx.constraintlayout.widget.ConstraintLayout>